{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 29,
  "lineage": "166e8492-d03c-89cf-aef3-9add4bd7110d",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "cluster_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:573590603497:loadbalancer/app/usp-cluster-lb/b4a00f371af8d747",
            "arn_suffix": "app/usp-cluster-lb/b4a00f371af8d747",
            "desync_mitigation_mode": "defensive",
            "dns_name": "usp-cluster-lb-1369843049.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:573590603497:loadbalancer/app/usp-cluster-lb/b4a00f371af8d747",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "usp-cluster-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07a7d292026683aa6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07b645b2f26b6574b"
              },
              {
                "subnet_id": "subnet-0b594c9362ffad65d"
              },
              {
                "subnet_id": "subnet-0e5818d2d65817de8"
              }
            ],
            "subnets": [
              "subnet-07b645b2f26b6574b",
              "subnet-0b594c9362ffad65d",
              "subnet-0e5818d2d65817de8"
            ],
            "timeouts": {
            },
            "vpc_id": "vpc-04822033decd807c6",
            "zone_id": "ZP97RAFLXTNZK"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "cluster_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:573590603497:listener/app/usp-cluster-lb/b4a00f371af8d747/3ac4a59aa0352f34",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 0,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:573590603497:targetgroup/usp-api-tg-stg/4a27e3c33cda8146",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:573590603497:listener/app/usp-cluster-lb/b4a00f371af8d747/3ac4a59aa0352f34",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:573590603497:loadbalancer/app/usp-cluster-lb/b4a00f371af8d747",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "read": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:573590603497:targetgroup/usp-api-tg-stg/4a27e3c33cda8146",
            "arn_suffix": "targetgroup/usp-api-tg-stg/4a27e3c33cda8146",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:573590603497:targetgroup/usp-api-tg-stg/4a27e3c33cda8146",
            "load_balancing_algorithm_type": "round_robin",
            "name": "usp-api-tg-stg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04822033decd807c6"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:573590603497:security-group/sg-07a7d292026683aa6",
            "description": "usp-cluster-lb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a7d292026683aa6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "usp api",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "usp-cluster-lb",
            "name_prefix": "",
            "owner_id": "573590603497",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-04822033decd807c6"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:573590603497:security-group/sg-0f767bf8c574a7091",
            "description": "2022-07-04T09:38:39.793Z",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f767bf8c574a7091",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "usp-api-3595",
            "name_prefix": "",
            "owner_id": "573590603497",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "usp-api-stg"
            },
            "tags_all": {
              "Name": "usp-api-stg"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-04822033decd807c6"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:573590603497:security-group/sg-013adaef381f7a51b",
            "description": "Created by RDS management console",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013adaef381f7a51b",
            "ingress": [
              {
                "cidr_blocks": [
                  "117.220.42.193/32"
                ],
                "description": "windows",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "122.176.45.45/32"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "for fargate api instance",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f767bf8c574a7091"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "usp-db-stg",
            "name_prefix": "",
            "owner_id": "573590603497",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "usp-db-stg"
            },
            "tags_all": {
              "Name": "usp-db-stg"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-04822033decd807c6"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}